# void-vocal-vst

./: .gitignore  CMakeLists.txt  QUALITY_CHECKS.md  README.md  TEST_RESULTS.md  build.sh  check_harmonic_glide.py  check_lufs.py  check_mono_compatibility.py  create_test_files.py  git-safe-add.sh  install.sh  render_and_test.sh  test.sh  test_results_summary.md
Documentation/: AI_WORKING_RULES.md  CURRENT_STATUS.md  GIT_SAFETY.md  PHASE_0_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_START.md  SOUND_CONTRACTS.md  STAGE_1.md  TESTING_GUIDE.md  main.md
Source/: HelpTooltip.cpp  HelpTooltip.h  OfflineRenderer.cpp  OfflineRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  offline_render.cpp
Source/DSP/: BinauralFlow.cpp  BinauralFlow.h  DynamicLayer.cpp  DynamicLayer.h  GranularEngine.cpp  GranularEngine.h  HarmonicGlide.cpp  HarmonicGlide.h  MotionMod.cpp  MotionMod.h  SpaceEngine.cpp  SpaceEngine.h  SpectralEngine.cpp  SpectralEngine.h
tests/: test_basic.cpp
